<resources>
    <string name="app_name">FlightIntel</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="nearby">Nearby</string>
    <string name="browse">Browse</string>
    <string name="search">Search</string>
    <string name="nearby_wx">Nearby Wx Stations</string>
    <string name="search_hint">Search airports</string>
    <string name="download_installed">Currently installed</string>
    <string name="download_available">Available for download</string>
    <string name="download_noinstall">No installed data</string>
    <string name="download_noupdate">None available</string>
    <string name="download_all">Download All</string>
    <string name="delete_all">Delete All</string>
    <string name="download_expired">Expired</string>
    <string name="download_error">Unable to contact update server</string>
    <string name="downloading">Downloading\u2026</string>
    <string name="installing">Installing\u2026</string>
    <string name="install_done">Finished</string>
    <string name="please_wait">Please wait\u2026</string>
    <string name="view_details">View details</string>
    <string name="delete">Delete</string>
    <string name="waiting_location">Waiting for location\u2026</string>
    <string name="communications">Communications</string>
    <string name="airport_communications">Airport Communications</string>
    <string name="airport_services">Airport Services</string>
    <string name="other_services">Other Services</string>
    <string name="weather_stations">Weather Stations</string>
    <string name="airport_owner">Ownership and Contact</string>
    <string name="airport_manager">Airport Manager</string>
    <string name="remarks">Remarks</string>
    <string name="nearby_facilities">Nearby Facilities</string>
    <string name="home_airport">Home Airport</string>
    <string name="airport_attendance">Airport Attendance</string>
    <string name="atc_communications">ATC Communications</string>
    <string name="atc_hours">ATC Hours</string>
    <string name="atc_phones">ATC Phone Numbers</string>
    <string name="apt_phones">Airport Phone Numbers</string>
    <string name="sunrise_sunset">Sunrise and Sunset</string>
    <string name="runways">Runways</string>
    <string name="helipads">Helipads</string>
    <string name="nearby_navaids">Nearby Navaids</string>
    <string name="navaid_details">Navaid Details</string>
    <string name="navaid_notams">Navaid NOTAMs</string>
    <string name="airport_notams">Airport NOTAMs</string>
    <string name="vor">Directional Navaids</string>
    <string name="ndb">Non-directional Navaids</string>
    <string name="ils_details">ILS details</string>
    <string name="localizer">Localizer</string>
    <string name="glideslope">Glideslope</string>
    <string name="innermarker">Inner Marker</string>
    <string name="middlemarker">Middle Marker</string>
    <string name="outermarker">Outer Marker</string>
    <string name="faa_services">FAA Services</string>
    <string name="fss_services">FSS Services</string>
    <string name="airport_operations">Airport Operations</string>
    <string name="donation_levels">Choose Donation</string>
    <string name="past_donations">Past Donations</string>
    <string name="agree">I Agree</string>
    <string name="disagree">I Disagree</string>
    <string name="other_details">Other Details</string>
    <string name="raw_text">Raw Text</string>
    <string name="phone">Phone</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="rate_it">Rate It</string>
    <string name="refresh">Refresh</string>
    <string name="charts">Charts</string>
    <string name="library">Library</string>
    <string name="scratch_pad">Scratch Pad</string>
    <string name="sky_condition">Sky Condition</string>
    <string name="winds">Winds</string>
    <string name="visibility">Visibility</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="dewpoint">Dew Point</string>
    <string name="pressure">Pressure</string>
    <string name="precipitation">Precipitation</string>
    <string name="instrument_procedures">Instrument Procedures</string>
    <string name="aeronav_products">AeroNav Digital Products</string>
    <string name="based_aircraft">Based Aircraft</string>
    <string name="annual_ops">Annual Operations</string>
    <string name="metar_graphics">METAR Graphics</string>
    <string name="taf_graphics">TAF Graphics</string>
    <string name="pirep_graphics">Pirep Graphics</string>
    <string name="airsigmet_graphics">Sigmet Graphics</string>
    <string name="select_prog_chart">Select Prognosis Chart</string>
    <string name="select_radar_image">Select Radar Image</string>
    <string name="sd_card_monitor">SD Card Monitor</string>
    <string name="try_now">Try Now</string>
    <string name="view_graphic">View Graphic</string>
    <string name="charts_download">Charts Download</string>
    <string name="tfr_list">TFR List</string>
    <string name="airport_info">Airport Info</string>
    <string name="tfr_text">TFR Text</string>
    <string name="tfr_details">TFR Details</string>
    <string name="tfrs">TFRs</string>
    <string name="select_charts_volume">Select Charts Volume</string>
    <string name="select_type">Select Type</string>
    <string name="ceiling">Ceiling</string>
    <string name="utc_time">UTC Time</string>
    <string name="home_time">Home Time</string>
    <string name="local_time">Local Time</string>
    <string name="clocks">Clocks</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="leg">Leg</string>
    <string name="colon">:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="question">\?</string>
    <string name="category">Category</string>
    <string name="e6b">E6B Computer</string>
    <string name="rwy">Runway</string>
    <string name="var">Declination</string>
    <string name="hwnd">Head Wind</string>
    <string name="xwnd">Cross Wind</string>
    <string name="gs">Ground Speed</string>
    <string name="hdg">Heading</string>
    <string name="crs">Course</string>
    <string name="ws">Wind Speed</string>
    <string name="wca">WCA</string>
    <string name="wdir">Wind Direction</string>
    <string name="altitude">Altitude</string>
    <string name="input_degC">\? \u00B0C</string>
    <string name="input_ft">ft</string>
    <string name="input_inHg">\? inHg</string>
    <string name="input_kts">\? kts</string>
    <string name="deg_true">deg true</string>
    <string name="input_min">\? min</string>
    <string name="input_nm">\? nm</string>
    <string name="input_gal">\? Gal</string>
    <string name="input_gph">\? Gal/h</string>
    <string name="input_lbs">\? lbs</string>
    <string name="input_lbsph">\? lbs/h</string>
    <string name="input_ftpnm">\? ft/nm</string>
    <string name="input_ftpmin">\? ft/min</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ft">ft</string>
    <string name="degC">deg C</string>
    <string name="degF">deg F</string>
    <string name="deg">deg</string>
    <string name="inHg">in Hg</string>
    <string name="mbar">mBar</string>
    <string name="kts">kts</string>
    <string name="nm">nm</string>
    <string name="min">min</string>
    <string name="gal">gal</string>
    <string name="gph">gal/h</string>
    <string name="lbs">lbs</string>
    <string name="lbsph">lbs/h</string>
    <string name="ftpmin">ft/min</string>
    <string name="ftpnm">ft/nm</string>
    <string name="pct">%</string>
    <string name="altimeter">Altimeter</string>
    <string name="elevation">Elevation</string>
    <string name="pa">Pressure Altitude</string>
    <string name="da">Density Altitude</string>
    <string name="ta">True Altitude</string>
    <string name="ias">IAS</string>
    <string name="tas">TAS</string>
    <string name="iat">IAT</string>
    <string name="oat">OAT</string>
    <string name="ia">Indicated Altitude</string>
    <string name="mach">Mach Number</string>
    <string name="recovery_factor">Recovery Factor</string>
    <string name="time_flown">Time Flown</string>
    <string name="flight_time">Flight Time</string>
    <string name="distance_flown">Distance Flown</string>
    <string name="ground_speed">Ground Speed</string>
    <string name="station_altitude">Station Altitude</string>
    <string name="total_fuel">Total Fuel</string>
    <string name="total_weight">Total Weight</string>
    <string name="burn_rate">Burn Rate</string>
    <string name="endurance">Endurance</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="climb_grad">Climb Gradient</string>
    <string name="climb_rate">Climb Rate</string>
    <string name="initial_alt">Initial Altitude</string>
    <string name="crossing_alt">Crossing Altitude</string>
    <string name="fix_dist">Distance to Fix</string>
    <string name="descent_rate">Descent Rate</string>
    <string name="desired_alt">Desired Altitude</string>
    <string name="distance">Distance</string>
    <string name="range">Range</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="afd">A/FD</string>
    <string name="airports">Airports</string>
    <string name="title_navdrawer_afd">A/FD</string>
    <string name="title_navdrawer_wx">Weather</string>
    <string name="title_navdrawer_dof">Obstacles</string>
    <string name="title_navdrawer_tfr">TFR</string>
    <string name="title_navdrawer_library">Library</string>
    <string name="title_navdrawer_scratchpad">Scratch Pad</string>
    <string name="title_navdrawer_clocks">Clocks</string>
    <string name="title_navdrawer_e6b">E6B</string>
    <string name="title_navdrawer_charts">Charts</string>
    <string name="title_navdrawer_settings">Settings</string>
    <string name="datis_details">D-ATIS details</string>
    <string name="combined_atis">Combined ATIS</string>
    <string name="arrival_atis">Arrival ATIS</string>
    <string name="departure_atis">Departure ATIS</string>
    <string name="bullet">\u2022</string>
    <plurals name="airports_found">
        <item quantity="zero">No airports found</item>
        <item quantity="one">1 airport found</item>
        <item quantity="other">%1$d airports found</item>
    </plurals>
    <plurals name="notams_found">
        <item quantity="zero">No NOTAMs found</item>
        <item quantity="one">1 NOTAM found</item>
        <item quantity="other">%1$d NOTAMs found</item>
    </plurals>
    <plurals name="search_entry_found">
        <item quantity="zero">No airports matching \'%2$s\'</item>
        <item quantity="one">1 airport matching \'%2$s\'</item>
        <item quantity="other">%1$d airports matching \'%2$s\'</item>
    </plurals>
    <string name="theme_default">BatterySaver</string>
</resources>