<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * FlightIntel for Pilots
 *
 * Copyright 2011-2016 Nadeem Hasan <nhasan@nadmm.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->

<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/item_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView android:id="@+id/e6b_label"
                style="@style/TextLabel"
                android:padding="@dimen/label_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TableLayout
                android:background="@drawable/rounded_rectangle"
                android:stretchColumns="0,1"
                android:padding="@dimen/item_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/TextMedium"
                        android:text="@string/initial_alt"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <TextView
                        style="@style/TextMedium"
                        android:text="@string/descent_rate"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:paddingBottom="@dimen/item_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText android:id="@+id/e6b_edit_initial_alt"
                        style="@style/TextSmall"
                        android:inputType="number"
                        android:hint="@string/input_ft"
                        android:layout_marginTop="-6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content" />
                <EditText android:id="@+id/e6b_edit_descent_rate"
                        style="@style/TextSmall.Bold"
                        android:inputType="none"
                        android:hint="@string/ftpmin"
                        android:focusable="false"
                        android:layout_marginTop="-6dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginLeft="14dp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/TextMedium"
                        android:text="@string/crossing_alt"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:paddingBottom="@dimen/item_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText android:id="@+id/e6b_edit_crossing_alt"
                        style="@style/TextSmall"
                        android:inputType="number"
                        android:hint="@string/input_ft"
                        android:layout_marginTop="-6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/TextMedium"
                        android:text="@string/gs"
                        android:paddingLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:paddingBottom="@dimen/item_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText android:id="@+id/e6b_edit_gs"
                        style="@style/TextSmall"
                        android:inputType="number"
                        android:hint="@string/input_kts"
                        android:layout_marginTop="-6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/TextMedium"
                        android:text="@string/fix_dist"
                        android:paddingLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:paddingBottom="@dimen/item_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText android:id="@+id/e6b_edit_fix_distance"
                        style="@style/TextSmall"
                        android:inputType="number"
                        android:hint="@string/input_nm"
                        android:layout_marginTop="-6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
        <TextView android:id="@+id/e6b_msg"
                style="@style/TextSmall.Light"
                android:gravity="center"
                android:padding="@dimen/item_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
